# EKtools-image

./: .dockerignore  .gitignore  Dockerfile  README.md  openapi.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
src/: main.py
src/api/: rasterize.py  remove_bg.py  vectorize.py
src/core/: __init__.py  background.py  quantize.py  rasterizer.py  svg_builder.py  trace.py
src/utils/: __init__.py  image_io.py  mask_ops.py  validators.py
tests/: test_rasterize.py  test_remove_bg.py  test_vectorize.py
