[project]
name = "ektools-imagebackend"
version = "0.1.0"
description = "FastAPI backend for image processing: vectorize, rasterize, and background removal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "python-multipart>=0.0.16",
    "pillow>=12.2.0",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "scikit-image>=0.26.0",
    "cairosvg>=2.9.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
